@@ -134,3 +134,6 @@
 	'src/common/librarymodel.h'.
 	* Moved the 'Log', 'LogLine', 'LogModel' and 'LogListModel'
 	classes from 'src/rdlogeditb/' to 'src/common/'.
+2017-02-16 Fred Gleason <fredg@paravelsystems.com>
+	* Added a 'CartFilterWidget' class in 'src/common/cartfilterwidget.cpp'
+	and 'src/common/cartfilterwidget.h'.
